Fix create, add flash and error messages, create show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,13 @@
   </head>
 
   <body>
+    <% flash.each do |name, msg|%>
+      <ul>
+        <li>
+          <%= msg %>
+        </li>
+      </ul>
+    <% end %>
     <%= yield %>
   </body>
 </html>
