add show and index

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,5 @@
 
 <p>Title: <%= @article.title %></p>
 <p>Description: <%= @article.description %></p>
+<td><%= link_to  "Edit", edit_article_path(@article) %></td><br>
+<%= link_to  "Back", articles_path %>
