--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,7 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg|%>
-      <ul>
-        <li>
-          <%= msg %>
-        </li>
-      </ul>
-    <% end %>
+    <%= render  "layouts/messages" %>
     <%= yield %>
   </body>
 </html>
