--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>AlphaBlog</title>
+    <%= stylesheet_link_tag   'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag   'application', 'data-turbolinks-track' => true %>    
     <%= csrf_meta_tags %>
   </head>
 
   <body>
     <%= render  "layouts/messages" %>
-    <%= yield %>
+    <%= render  "layouts/navigation" %>   
+    <div class="container"> <%= yield %></div>
+    <%= render  "layouts/footer" %> 
   </body>
 </html>
