--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,4 @@
-<h1>hello world!!</h1>
-<%= link_to  "Alpha-blog", articles_path %>
+<div class="center jumbotron">
+    <h1>Alpha-blog</h1>
+     <%= link_to  "Sign Up Now", "#", class: "btn btn-danger bt-lg btn-xlrage" %>
+</div>
