--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,3 @@
-<%= render 'shared/errors', obj: @user%>  
+<h1 align="center">Sign up for Alpha Blog</h1>
 
-<div class="row">
-    <div class='col-xs-12'>
-<%= form_for @article  do |f| %>
-<div class="form-group">
-        <div class="control-label col-sm-2">
-    <%= f.label :title %></br>
-        </div>
-        <div class="col-sm-8"></div>
-    <%= f.text_field :title, class: "form-control", placeholder: "Title Of Article", autofocus: true %>
-</div>
-    </div>
-    <div class="form-group">
-    <div class="control-label col-sm-2">
-            <%= f.label :description %></br>
-                </div>
-                <div class="col-sm-10 "></div>
-                <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description Of Article", autofocus: true %>
-            </div>
-        </div>
-
- <div class="form-group">                
-    <%= f.submit class: 'btn btn-primary btn-lg' %>
- </div>
-
-<% end %>
-
-<div class="col=xs-4 col-xs-offset-4">
-[ <%= link_to  "Cancel and return", articles_path %> ]
-</div>
-</div>
-</div>
+<%= render 'form' %>
