--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center jumbotron">
     <h1>Alpha-blog</h1>
-     <%= link_to  "Sign Up Now", "#", class: "btn btn-danger bt-lg btn-xlrage" %>
+    <%= link_to "Sign up now", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
