--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-custom">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to "Articles", articles_path %></li>
-        <li><%= link_to "Users", users_path %></li>
+        <li><%= link_to "Articles", articles_path, id: "item1" %></li>
+        <li><%= link_to "Users", users_path, id: "item1" %></li>
         <% if logged_in? %>  
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
@@ -52,7 +52,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+          <li><%= link_to 'Log out', logout_path, method: :delete, id: "item1" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
             <ul class="dropdown-menu">
@@ -64,8 +64,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to 'Log in', login_path %></li>
-          <li><%= link_to 'Sign up', signup_path %></li>
+          <li><%= link_to 'Log in', login_path, id: "item1" %></li>
+          <li><%= link_to 'Sign up', signup_path, id: "item1" %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
